--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,3 +2,45 @@ body {
     background: #f5f5f5;
 }
 
+.list-row h4 {
+    margin: 0;
+    font-size: 22px;
+    display: inline;
+}
+
+.sidebar {
+    padding: 0;
+}
+
+.left-sidebar .header {
+    background: #226DA8;
+}
+
+.left-sidebar .text {
+    padding: 10px 0 10px 15px;
+    color: white;
+    font-weight: bold;
+}
+
+.left-sidebar li {
+    border-bottom: 1px solid #E5E5E5;
+    font-size: 20px;
+}
+
+.left-sidebar li:last-child {
+    border-bottom: none;
+}
+
+.left-sidebar h3 {
+    margin: 0;
+    font-size: 30px;
+}
+
+.list-head h3 {
+    margin-top: 0;
+}
+
+.right-circle {
+    float: right;
+    margin-top: 7px;
+}
